--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -142,11 +142,14 @@ redesign and refactor the CashBox App project.\newline{}%
 \item Git and Gitlab Training.
 \item Apache and Nginx journal report analysis.
 \item Nginx Lua module develop(OpenResty).
+\item Research Server Side Auto Configuration and Docker System
 \end{itemize}
 }
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item Abandon the outdated centralized version control system, SVN, use the advanced distributed version control system Git, the company also start to use the popular on-line coding review and authority control web app, Gitlab.
+\item Practise Android MVP/MVC architecture
+\item An OpenResty Lua Application which check whether a http request's validate by check its Servlet Session.
 \end{itemize}
 }
 
