update en resume

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~***********}                         % 可选项、如不需要可删除本行
+\mobile{+86~18589090105}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -73,7 +73,20 @@
 %\cvitem{说明}{\small 论文简介}
 
 \section{Working Experience}
-%\subsection{专业}
+\cventry{2017.4-now}{Software Engineer}{Mcafee Co., Ltd. Shenzhen}{}{}{%
+}
+\cvitem{Duty:}{%
+\begin{itemize}
+\item {\small \emph {Android app engineer}}
+\end{itemize}
+}
+\cventry{2016.8-17.4}{Software Engineer}{Intel Co., Ltd. Shenzhen}{}{}{%
+}
+\cvitem{Duty:}{%
+\begin{itemize}
+\item {\small \emph {Android app engineer}}
+\end{itemize}
+}
 \cventry{2014.4-16.4}{Software Engineer}{Iboxpay Co., Ltd. Shenzhen}{}{}{%
 }
 \cvitem{Duty:}{%
@@ -113,6 +126,26 @@
 \cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
 
 \section{Projects experience}
+\subsection{Intel Security Mobile App Project}
+\cventry{2017.8-now}{Android App Engineer}{Intel Co., Ltd.}{ShenZhen}{}{%
+Mcafee Mobile Security App development.\newline{}%
+}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Android Mobile App UI development.
+\end{itemize}
+}
+\subsection{IBoxPay's CashBox Android App Project}
+\cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
+redesign and refactor the CashBox App project.\newline{}%
+}
+\cvitem{Description:}{%
+\begin{itemize}
+\item CashBox App is IboxPay's core project, which consists of the mobile client side app, the backend side trading system, and an intelligent terminal hardware. This is what we called the mobile POS, a box hardware must be connected to the mobile side CashBox app, which acts as a middleware between the terminal box and the backend trading system. The customer swipes his bank card in that little portable hardware, then he can pay the bill to the merchants.
+\item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels such as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
+\end{itemize}
+}
+
 \subsection{IBoxPay's CashBox Android App Project}
 \cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 redesign and refactor the CashBox App project.\newline{}%
