--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~18589090105}                         % 可选项、如不需要可删除本行
+\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -117,8 +117,9 @@
 \section{Programming Skills}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
 \cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{\small C, Emacs Lisp, Python, Java, Javascript, Shell, \LaTeX{}}
-\cvitem{Operation System} {Linux(expert), Mac OS X(Daily usage)}
+\cvitem{Languages}{\small Java, Scala, Clojure, C, Kotlin, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{Mobile dev}{\small Android with Kotlin, IOS with Swift}
+\cvitem{Operation System} {Android, Linux, Mac OS X(Daily usage)}
 \cvitem{Editor}{Emacs}
 
 \section{OpenSource codes}
@@ -127,7 +128,7 @@
 
 \section{Projects experience}
 \subsection{Intel Security Mobile App Project}
-\cventry{2017.8-now}{Android App Engineer}{Intel Co., Ltd.}{ShenZhen}{}{%
+\cventry{2016.8-now}{Android App Engineer}{Intel Co., Ltd. \& Mcafee China}{ShenZhen}{}{%
 Mcafee Mobile Security App development.\newline{}%
 }
 \cvitem{Description:}{%
@@ -135,14 +136,12 @@ Mcafee Mobile Security App development.\newline{}%
 \item Android Mobile App UI development.
 \end{itemize}
 }
-\subsection{IBoxPay's CashBox Android App Project}
-\cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
-redesign and refactor the CashBox App project.\newline{}%
-}
-\cvitem{Description:}{%
+
+\cvitem{Achievement:}{%
 \begin{itemize}
-\item CashBox App is IboxPay's core project, which consists of the mobile client side app, the backend side trading system, and an intelligent terminal hardware. This is what we called the mobile POS, a box hardware must be connected to the mobile side CashBox app, which acts as a middleware between the terminal box and the backend trading system. The customer swipes his bank card in that little portable hardware, then he can pay the bill to the merchants.
-\item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels such as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
+\item Use self developed SVG file in the UI developement to reduce the apk size.
+\item Develop the UI animation by following the Android material design principle.
+\item Develop the Wifi protection module to detect ARP spoofing attack.
 \end{itemize}
 }
 
@@ -222,6 +221,15 @@ redesign and refactor the CashBox App project.\newline{}%
 \begin{itemize}
 \item Android framework and System Developer from version 1.6 to 4.3, My duties include integration Makefile development and HAL layer development.
 \end{itemize}}
+
+\cvitem{Achievement:}{%
+\begin{itemize}
+\item develop and maintain the integration and build shell script to support the android system release - Bash shell coding.
+\item develop and porting the Bluetooth \& Wifi module to multi-hardware platform.
+\item develop and porting Android's HAL layter to multi-hardware - C coding.
+\end{itemize}
+}
+% \cvitem{}{}
 
 %\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
