update eng resume

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -43,7 +43,7 @@
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
-\homepage{zpcat.blogspot.com}                  % 可选项、如不需要可删除本行
+\homepage{https://medium.com/@zpcat}                  % 可选项、如不需要可删除本行
 %\extrainfo{附加信息 (可选项)}                  % 可选项、如不需要可删除本行
 \photo[64pt][0.4pt]{myself-new}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
 %\quote{引言(可选项)}                           % 可选项、如不需要可删除本行
@@ -64,7 +64,8 @@
 \maketitle
 
 \section{Educational Background}
-\cventry{2007.9-10.7}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{Shen Yang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\cventry{2007.9-10.7}{Master}{Institute of Metal Research, Chinese Academy of Sciences}{ShenYang} {Chemical Physics} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\vspace{5mm}
 \cventry{2003.9-07.7}{Bachelor}{YanTai university}{YanTai} {Applied Physics} {} % {\textit{成绩}}{说明}
 
 %\section{毕业论文}
@@ -73,70 +74,179 @@
 %\cvitem{说明}{\small 论文简介}
 
 \section{Working Experience}
-\cventry{2017.4-now}{Software Engineer}{Mcafee Co., Ltd. Shenzhen}{}{}{%
+\cventry{2017.11-now}{Software Engineer}{Ringcentral Co., Ltd.}{XiaMen}{}{%
 }
-\cvitem{Duty:}{%
+\cvitem{Position}{%
 \begin{itemize}
 \item {\small \emph {Android app engineer}}
 \end{itemize}
 }
-\cventry{2016.8-17.4}{Software Engineer}{Intel Co., Ltd. Shenzhen}{}{}{%
+\vspace{-4.5mm}
+\cvitem{Responsibily}{%
+\begin{itemize}
+\item {\small \emph {Integrated WebRTC client to our IM product}}
+\item {\small \emph {WebRTC Meeting Product Development}}
+\end{itemize}
 }
-\cvitem{Duty:}{%
+
+\cventry{2016.8-17.11}{Software Engineer}{Intel Co., Ltd. \& Mcafee Co., Ltd.}{ShenZhen}{}{%
+}
+\cvitem{Position}{%
 \begin{itemize}
 \item {\small \emph {Android app engineer}}
 \end{itemize}
 }
-\cventry{2014.4-16.4}{Software Engineer}{Iboxpay Co., Ltd. Shenzhen}{}{}{%
+\vspace{-4.5mm}
+\cvitem{Responsibily}{%
+\begin{itemize}
+\item {\small \emph {Mcafee Antivirus App Development}}
+\end{itemize}
 }
-\cvitem{Duty:}{%
+\vspace{-4.5mm}
+\cvitem{Note}{%
+\begin{itemize}
+\item {\small \emph {Mcafee became independent from Intel security department on 04/2017}}
+\end{itemize}
+}
+
+\cventry{2014.4-16.4}{Software Engineer}{Iboxpay Co., Ltd.}{ShenZhen}{}{%
+}
+\cvitem{Position}{%
 \begin{itemize}
 \item {\small \emph {Android app engineer}}
-\item {\small \emph {Software Engineer at Architecture Team}}
 \end{itemize}
 }
-\cventry{2013.9-14.4}{Software Engineer}{Topwise3g Co., Ltd. Shenzhen}{}{}{}
-\cvitem{Duty:}{%
+\vspace{-4.5mm}
+\cvitem{Responsibily}{%
 \begin{itemize}
-\item {\small \emph {Bluetooth Low Energy Engineer}}
+\item {\small \emph {IBoxpay mobile POS product development}}
+\end{itemize}
+}
+
+
+\cventry{2010.4-14.4}{Software Engineer}{Topwise Co., Ltd.}{ShenZhen}{}{%
+}
+\cvitem{Position}{%
+\begin{itemize}
 \item {\small \emph {Android framework engineer}}
 \end{itemize}
 }
-\cventry{2012.2-12.8}{Software Engineer}{Topwise Co., Ltd. Shenzhen}{}{}{%
+\vspace{-4.5mm}
+\cvitem{Department}{%
+\begin{itemize}
+\item {\small {2010.4 - 2012.1}, \small \emph {Topwise3g Co., Ltd.}}
+\item {\small {2012.2 - 2012.8}, \small \emph {Topwise Co., Ltd.}}
+\item {\small {2012.8 - 2013.8}, \emph {Free Developer}, \small {Resignation}}  
+\item {\small {2013.9 - 2014.4}, \small \emph {Topwise3g Co., Ltd.}}
+\end{itemize}
 }
-\cvitem{Duty:}{%
+\vspace{-4.5mm}
+\cvitem{Responsibily}{%
 \begin{itemize}
-\item {\small \emph {Android framework engineer}}
-\end{itemize}}
-\cventry{2010.4-12.1}{Software Engineer}{Topwise3g Co., Ltd. Shenzhen}{}{}{}
-\cvitem{Duty:}{%
-\begin{itemize}
-\item {\small \emph {Android framework engineer}}
-\end{itemize}} %\newline{}
+\item {\small \emph {Android System HAL layer development}}
+\item {\small \emph {Marvell, Spreadtrum, Qualcomm, Allwinner Android platform Development}}
+\end{itemize}
+}
 
 \section{Programming Skills}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{blog}{\small \href{http://zpcat.blogspot.com/}{\color{blue}{http://zpcat.blogspot.com/}}}
-\cvitem{Languages}{\small Java, Scala, Clojure, C, Kotlin, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
-\cvitem{Mobile dev}{\small Android with Kotlin, IOS with Swift}
-\cvitem{Operation System} {Android, Linux, Mac OS X(Daily usage)}
-\cvitem{Editor}{Emacs}
+\cvitem{blog}{\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
+\cvitem{Languages}{\small Kotlin, Java, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
+\cvitem{OS} {Android, Linux, Mac OS X}
+\cvitem{Github} {\small \href{https://medium.com/@zpcat}{\color{blue}{https://medium.com/@zpcat}}}
+\cvitem{Editor}{Emacs, Android Studio, VS Code}
 
-\section{OpenSource codes}
-\cvitem{\href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}}}{\small BLE(Bluetooth Low Energy) Device debug tool for Android.}
-\cvitem{\href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig-android}}}{\small jbig single-color space picture codec for Android.}
+\section{Job Expectation \& Self Evaluation}
+\vspace{5mm}
+\cvitem{}{%
+  \begin{itemize}
+  \item I look forward to taking more challenges that can push me to the fulfillment of my ambitions to be a productive engineer.
+  \item I look forward to serving a group that has the value of work-life balance.
+  \item I look forward to participating in a pioneering and growing project instead of a blank and mature one.
+  \item I look forward to working with engineers better than me.
+  \item I look forward to working for engineers better than me.
+\end{itemize}
+}
 
 \section{Projects experience}
-\subsection{Intel Security Mobile App Project}
-\cventry{2016.8-now}{Android App Engineer}{Intel Co., Ltd. \& Mcafee China}{ShenZhen}{}{%
-Mcafee Mobile Security App development.\newline{}%
+\vspace{5mm}
+\subsection{Video Meeting Project}
+\vspace{3mm}
+\cventry{2019.1-20.3}{Software Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+C++,Mac OS, Android Development.\newline{}%
 }
+\vspace{-2mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Video Meeting Project is a Video Meeting System that deployed to traditional Meeting Rooms and let the remote conference don't limit to geography restriction and traditional voice call. It includes a controller side which always an app running in a pad, and the host side, which always a PC side, responsible to display the videos. The Controller can control the meeting and video.
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{Achievement:}{%
+\begin{itemize}
+\item Improve the controller side and host side connection by implement a websocket connection between them throught LAN. Encrypt this connection by generate X509 cert everytime before they connected.
+\item LAN network service discovery, which named network serice discovery in Android, and named Bonjour, also known as zero-configuration networking in IOS and Mac OS. Those feature can be leveraged to let controller and host discover each other. This solution was abondoned for some reason, but I like this one.
+\item Collect Mac OS hardware info and display them to an overflow window at Mac OS.
+\item Android side Controller app implementation.
+\end{itemize}
+}
+\subsection{TTF Font icon Unit Test}
+\vspace{3mm}
+\cventry{2018.6-18.7}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+ Android App Development.\newline{}%
+}
+\vspace{-2mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item Use Font Icon to replace the traditional PNG or SVG resources was a normal solution to reduce App size and improve performance, whether in Web App Dev and Mobile App. But the Font Icon was not friendly to manage when zipping many fonts together, there is hard to detect bugs when designer pack the wrong graph fonts or disordered them by mistake.
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{Achievement:}{%
+\begin{itemize}
+\item By hacking to the inside of a TTF file, and read the target graph font's drawing cmd buffer, and generate its hash value as fingerprint and recording to our app's resources, then compare this recording whenever the developer get the TTF file from the designer. This would fill the gap between designer and developer, provide the possibility to wrote a Unit Test for a TTF font file.
+\item Wrote a TTF Unit Test for Android project to make sure the TTF file would be always provide the corrent graph.
+\item Wrote a gradle plugin to reset the needed graph font's fingerprint.
+\item Check the target graph font's visual image by running a JavaFX app from a gradle plugin command.
+\item Get a report of the unused graph fonts stored in a TTF file.
+\item Get a report of the duplicated graph fonts that stored in a TTF file.
+\item Get a report of incorrect graph fonts by compare the previous TTF file graph font's fingerprint.
+\end{itemize}
+}
+
+\subsection{RingCentral Video Project}
+\vspace{3mm}
+\cventry{2017.12-18.12}{Android App Engineer}{Ringcentral XiaMen Co., Ltd.}{XiaMen}{}{%
+WebRTC Android Client Development.\newline{}%
+}
+\vspace{-2mm}
+\cvitem{Description:}{%
+\begin{itemize}
+\item RingCentral App was an IM product with VoIP and Video Chat feature. It chose the SFU solution to implement its Video chat feature, which include the SFU media server, Mobile Signal layer, Native meta data layer, App UI presenter layer.
+\end{itemize}
+}
+\vspace{-4mm}
+\cvitem{Achievement:}{%
+\begin{itemize}
+\item Implement UI presenter layer.
+\item Implement the most UI features at the earlier stage, include a sliding panel layout, which is my favorite one, because it already being abandoned, I open source to this github repo \href{https://github.com/suzp1984/AdvancedSlidingPanel}{\color{blue}{Advanced Sliding Panel}}
+\item The WebRTC SDK was being implemented quite differently in android and IOS/Mac, which results in the video rendering solution chosen by those platforms that should be quite different. But I didn't has the opportunity to digger deepr into this field, I prepared enought knownlege about OpenGL and would like to make a breakthrought if I get the opportunity.
+\item Read WebRTC source code including its architecture, ICE implementation, and another ICE alternative implementations like libjuice and libnice, RTP protocal details. Research SFU media server implementation, mediasoup.
+\end{itemize}
+}
+
+\subsection{Intel Security Mobile App Project}
+\vspace{3mm}
+\cventry{2016.8-17.7}{Android App Engineer}{Intel Co., Ltd. \& Mcafee China}{ShenZhen}{}{%
+Mcafee Antivirus App development.\newline{}%
+}
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item Android Mobile App UI development.
 \end{itemize}
 }
-
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item Use self developed SVG file in the UI developement to reduce the apk size.
@@ -146,37 +256,41 @@ Mcafee Mobile Security App development.\newline{}%
 }
 
 \subsection{IBoxPay's CashBox Android App Project}
+\vspace{3mm}
 \cventry{2014.7-15.5}{Android App Engineer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 redesign and refactor the CashBox App project.\newline{}%
 }
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item CashBox App is IboxPay's core project, which consists of the mobile client side app, the backend side trading system, and an intelligent terminal hardware. This is what we called the mobile POS, a box hardware must be connected to the mobile side CashBox app, which acts as a middleware between the terminal box and the backend trading system. The customer swipes his bank card in that little portable hardware, then he can pay the bill to the merchants.
 \item The intelligent terminals can be classified into its connection channel types, there are at least three types of channels such as Audio jack, Bluetooth Classic, Bluetooth Low Energy and UART serial port.
 \end{itemize}
 }
-
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item I rewrote the code according to the Object-Oriented Principal, decoupled the code by introduced an isolated android module project which can be reused in another project.
 \item I make the development process sustainable and the code is readable by wrote the software design document, wrote necessary unit-test and also maintenance a coding style document.
 \item The highlighted part of that code is the hardware connection channel part,  I  introduced a Connection interface, all the connection types, including Audio Jack and Bluetooth, were just implementations of that interface, then, when another project works on a new terminal with UART custom connection channel, what it did is just implement a new Connection interface.
-\item I porting the JBIG codec to Java environment by using the JNI method. JBIG codec is an efficient lossless compression algorithm for single color depth space picture.
+\item I porting the JBIG codec to Java environment by using the JNI method. JBIG codec is an efficient lossless compression algorithm for single color depth space picture. The Opensourced demo for Android App was \href{https://github.com/suzp1984/jbig-android}{\color{blue}{Jbig-Android}}
 \end{itemize}}
-\cvitem{}{}
+% \cvitem{}{}
 
 \subsection{Jobs at Software Architecture Team of IBoxPay}
+\vspace{3mm}
 \cventry{2015.7-16.3}{Software Developer}{IBoxPay Co., Ltd.}{ShenZhen}{}{%
 }
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item Android App Architecture research.
 \item Git and Gitlab Training.
 \item Apache and Nginx journal report analysis.
 \item Nginx Lua module develop(OpenResty).
-\item Research Server Side Auto Configuration and Docker System
 \end{itemize}
 }
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item Abandon the outdated centralized version control system, SVN, use the advanced distributed version control system Git, the company also start to use the popular on-line coding review and authority control web app, Gitlab.
@@ -184,44 +298,51 @@ redesign and refactor the CashBox App project.\newline{}%
 \item An OpenResty Lua Application which check whether a http request's validate by check its Servlet Session.
 \end{itemize}
 }
-
-\cvitem{}{}
+%\cvitem{}{}
 \subsection{Bluetooth Low Energy Project}
+\vspace{3mm}
 \cventry{2013.10-14.3}{Software Developer}{Topwise3g Co., Ltd.}{Shenzhen}{}{%
 }
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item Research and analysis Bluetooth Low Energy application at Broadcom's BLE board.
 \end{itemize}}
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item Open Sourced \href{https://github.com/suzp1984/Light_BLE}{\color{blue}{Light-BLE}} project, which can be used to debug and analysis the peripheral BLE device during development.
 \end{itemize}
 }
-\cvitem{}{}
+%\cvitem{}{}
 
 \subsection{Factory autotest toolkit for SpreadTrum's Android platform}
+\vspace{3mm}
 \cventry{2012.5-12.7}{Software Developer}{Topwise Co., Ltd.}{Shenzhen}{}{%
 }
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item The factory auto running test toolkit is running in an autotest machine which checks the newly produced PCB board.
 \end{itemize}
 }
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item check out the faulty PCB board at the early stage in the factory, then promote the rate of qualified PCB board out of the factory.
 \end{itemize}
 }
-\cvitem{}{}
+%\cvitem{}{}
 
-\subsection{Android Framework Development}
+\subsection{Android Rom Development}
+\vspace{3mm}
 \cventry{2010.5-12.8}{Software Developer}{Topwise3g \& Topwise Co., Ltd.}{Shenzhen}{}{}
+\vspace{-2mm}
 \cvitem{Description:}{%
 \begin{itemize}
 \item Android framework and System Developer from version 1.6 to 4.3, My duties include integration Makefile development and HAL layer development.
 \end{itemize}}
-
+\vspace{-4mm}
 \cvitem{Achievement:}{%
 \begin{itemize}
 \item develop and maintain the integration and build shell script to support the android system release - Bash shell coding.
